--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -38,7 +38,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               <a class="nav-item nav-link fw-medium" href="#">Login</a>
-              <a class="nav-item nav-link fw-medium" href="#">Register</a>
+              <a class="nav-item nav-link fw-medium" href="{% url 'register' %}">Register</a>
             </div>
           </div>
         </div>
@@ -48,6 +48,13 @@
     <main role="main" class="container">
       <div class="row">
         <div class="col-md-8">
+          {% if messages %}
+            {% for message in messages %}
+              <div id="message" class="alert alert-{{message.tags}}">
+                {{ message }}
+              </div>
+            {% endfor %}
+          {% endif %}
           {% block content %}{% endblock %}
         </div>
         <div class="col-md-4">
@@ -76,5 +83,16 @@
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+      
+      const message = document.getElementById('message')
+
+      if(message){
+        setTimeout(() => {
+          message.style.display = "none";
+        }, 3000)
+      }
+
+    </script>
   </body>
 </html>
