--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -5,7 +5,7 @@
         <div class="card border-success mb-3">
           <div class="d-flex article-metadata align-items-center justify-content-between border-bottom border-success border-2 w-auto">
           <a class="mr-2 card-header bg-transparent text-decoration-none fw-semibold border-bottom-0 fs-med" href="#">{{ post.author }}</a>
-          <div class="card-header bg-transparent border-bottom-0 fs-sm">{{ post.date|date:"d M Y" }}</div>
+          <div class="card-header bg-transparent border-bottom-0 fs-sm">{{ post.date_posted|date:"M d, Y" }}</div>
         </div>
           <div class="card-body text-success">
             <h5 class="card-title">{{ post.title }}</h5>
