--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -37,8 +37,18 @@
             </div>
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
-              <a class="nav-item nav-link fw-medium" href="#">Login</a>
-              <a class="nav-item nav-link fw-medium" href="{% url 'register' %}">Register</a>
+              {% if user.is_authenticated %}
+              <a class="nav-item nav-link fw-medium" href="{% url 'profile' %}">Profile</a>
+              <form method="post" action="{% url 'logout' %}">
+                {% csrf_token %}
+                <button type="submit" class="btn btn-link nav-item nav-link fw-medium" style="border:none; background:none;">
+                  Logout
+                </button>
+              </form>
+              {% else %}
+                <a class="nav-item nav-link fw-medium" href="{% url 'login' %}">Login</a>
+                <a class="nav-item nav-link fw-medium" href="{% url 'register' %}">Register</a>
+              {% endif %}
             </div>
           </div>
         </div>
@@ -58,22 +68,12 @@
           {% block content %}{% endblock %}
         </div>
         <div class="col-md-4">
-          <div class="content-section">
-            <h3>Our Sidebar</h3>
-            <p class='text-muted'>You can put any information here you'd like.
-              <ul class="list-group">
-                <li class="list-group-item list-group-item-light">Latest Posts</li>
-                <li class="list-group-item list-group-item-light">Announcements</li>
-                <li class="list-group-item list-group-item-light">Calendars</li>
-                <li class="list-group-item list-group-item-light">etc</li>
-              </ul>
-            </p>
-          </div>
+          {% block sidebar %}
+          {% endblock %}
         </div>
       </div>
     </main>
     
-
 
     <!-- These lines for reloading -->
     {% load django_browser_reload %}
