--- a/blog/templates/blog/full_post.html
+++ b/blog/templates/blog/full_post.html
@@ -1,11 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Posts</title>
-</head>
-<body>
-  
-</body>
-</html>
+{% extends "blog/base.html" %}
+{% block content %}
+  <h4>Uka sabirqil bu page hali bitmadi </h4>
+{% endblock content %}
