--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,6 +1,13 @@
 {% extends "blog/base.html" %}
 {% block content %}
-  <h1>
-    {{ user.username }}
-  </h1>
+<div class="content-section">
+  <div class="media d-flex align-items-center">
+    <img class="rounded-circle account-img" src="{{ user.profile.image.url }}">
+    <div class="media-body">
+      <h2 class="account-heading">{{ user.username }}</h2>
+      <p class="text-secondary">{{ user.email }}</p>
+      <p class="text-secondary">{{ user.profile.bio }}</p>
+    </div>
+  </div>
+</div>
 {% endblock content %}
