User Profile is now ready

--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -4,8 +4,16 @@
       <article class="w-auto">
         <div class="card border-success mb-3">
           <div class="d-flex article-metadata align-items-center justify-content-between border-bottom border-success border-2 w-auto">
-          <a class="mr-2 card-header bg-transparent text-decoration-none fw-semibold border-bottom-0 fs-med" href="#">{{ post.author }}</a>
-          <div class="card-header bg-transparent border-bottom-0 fs-sm">{{ post.date_posted|date:"M d, Y" }}</div>
+            <a class="mr-2 card-header bg-transparent text-decoration-none fw-semibold border-bottom-0 fs-med" 
+            href="{% url 'profile' %}">
+                <img src="{{ post.author.profile.avatar.url }}" alt="Author's Image" 
+                class="rounded-circle"
+                style="height: 40px; width: 40px; margin-right: 3px;">
+                {{ post.author }}
+            </a>
+            <div class="card-header bg-transparent border-bottom-0 fs-sm">
+              {{ post.date_posted|date:"M d, Y" }}
+            </div>
         </div>
           <div class="card-body text-success">
             <h5 class="card-title">{{ post.title }}</h5>
