--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -6,6 +6,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
+    <!-- Bootstrap Icons -->
+    <link rel="stylesheet" href="{% static 'node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
@@ -49,6 +51,10 @@
                 <a class="nav-item nav-link fw-medium" href="{% url 'login' %}">Login</a>
                 <a class="nav-item nav-link fw-medium" href="{% url 'register' %}">Register</a>
               {% endif %}
+              <button class="btn btn-danger">
+                <i class="bi bi-moon-fill"></i>
+                <i class="bi bi-sun-fill"></i>
+              </button>
             </div>
           </div>
         </div>
