--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -1,12 +1,27 @@
-
-  <div class="content-section">
+<!-- 
+<div class="card bg-white p-2 px-3 border border-secondary rounded mb-3">
     <h3>Our Sidebar</h3>
-    <p class="text-muted">You can put any information here you'd like.</p>
+    <p class="text">You can put any information here you'd like.</p>
     <ul class="list-group">
       <li class="list-group-item list-group-item-light">Latest Posts</li>
       <li class="list-group-item list-group-item-light">Announcements</li>
       <li class="list-group-item list-group-item-light">Calendars</li>
       <li class="list-group-item list-group-item-light">etc</li>
     </ul>
-  </div>
+  </div> -->
 
+  <div class="card border-success" style="width: 18rem;">
+    <div class="card-body">
+      <h3 class="card-title">Our Sidebar</h3>
+      <p class="card-text">You can put any information here you'd like.</p>
+    </div>
+    <ul class="list-group m-3 ">
+      <li class="list-group-item list-group-item-action d-flex justify-content-between align-items-center text-success border-success">
+        Latest Posts
+        <span class="badge text-bg-success rounded-pill">14</span>
+      </li>
+      <li class="list-group-item list-group-item-action text-success border-success">Announcements</li>
+      <li class="list-group-item list-group-item-action text-success border-success">Calendars</li>
+      <li class="list-group-item list-group-item-action text-success border-success">etc</li>
+    </ul>
+  </div>
