--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -1,20 +1,33 @@
 {% load static %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-bs-theme="light" id="theme-toggle">
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap Icons -->
-    <link rel="stylesheet" href="{% static 'node_modules/bootstrap-icons/font/bootstrap-icons.css' %}">
+    <!-- FontAwesome Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+    >
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
-
     <link rel="stylesheet" href="{% static 'blog/main.css' %}">
-
     {% if title %}
+
+    <script>
+      const savedTheme = localStorage.getItem('theme') || 'light';
+      document.documentElement.setAttribute('data-bs-theme', savedTheme);
+
+      if (savedTheme === 'dark') {
+          checkbox.checked = true;
+        } else {
+          checkbox.checked = false;
+        }
+    </script>
+    
       <title>
         {{ title }} Page
       </title>
@@ -51,10 +64,14 @@
                 <a class="nav-item nav-link fw-medium" href="{% url 'login' %}">Login</a>
                 <a class="nav-item nav-link fw-medium" href="{% url 'register' %}">Register</a>
               {% endif %}
-              <button class="btn btn-danger">
-                <i class="bi bi-moon-fill"></i>
-                <i class="bi bi-sun-fill"></i>
-              </button>
+              <div class="row align-items-center justify-content-center ms-2">
+                <input type="checkbox" class="checkbox" id="checkbox">
+                <label for="checkbox" class="checkbox-label">
+                  <i class="fa-solid fa-moon" style="color:#f1c40f"></i>
+                  <i class="fa-solid fa-sun" style="color: #f39c12;"></i>
+                  <span class="ball"></span>
+                </label>
+              </div>
             </div>
           </div>
         </div>
@@ -85,20 +102,10 @@
     {% load django_browser_reload %}
     {% django_browser_reload_script %}
 
-    
+      <!-- JavaScript -->
+      <script src="{% static 'Js/script.js' %}"></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script>
-      
-      const message = document.getElementById('message')
-
-      if(message){
-        setTimeout(() => {
-          message.style.display = "none";
-        }, 3000)
-      }
-
-    </script>
   </body>
 </html>
