--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -1,25 +1,37 @@
 {% extends "blog/base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="content-section">
-  <div class="media d-flex align-items-center">
-    <img class="rounded-circle account-img" src="{{ user.profile.avatar.url }}">
-    <div class="media-body">
-      <h2 class="account-heading">{{ user.username }}</h2>
-      <p class="text-secondary">{{ user.email }}</p>
-      <p class="text-secondary">{{ user.profile.bio }}</p>
+
+<div class="container ">
+  <div class="card bg-body text-body shadow-sm p-4 border-success rounded-4" style="max-width: 700px; margin: 0 auto;">
+    
+    <div class="d-flex align-items-center pb-3 mb-3">
+      <img 
+        src="{{ user.profile.avatar.url }}" 
+        alt="Profile Picture"
+        class="rounded-circle me-3 border border-2 border-success"
+        style="width: 100px; height: 100px; object-fit: cover;"
+      >
+      <div>
+        <h3 class="fw-semibold mb-0">{{ user.username }}</h3>
+        <p class="text-secondary mb-0">{{ user.email }}</p>
+        <p class="text-muted small mb-0">{{ user.profile.bio }}</p>
+      </div>
     </div>
+
+    <!-- Update Form -->
+    <form method="POST" enctype="multipart/form-data">
+      {% csrf_token %}
+      <fieldset class="form-group">
+        <legend class="border-bottom mb-3 fs-5 fw-semibold text-success">Profile Info</legend>
+        {{ user_form|crispy }}
+        {{ profile_form|crispy }}
+      </fieldset>
+      <div class="d-grid mt-3">
+        <button class="btn btn-success" type="submit">Update Profile</button>
+      </div>
+    </form>
   </div>
-  <form method="POST" enctype="multipart/form-data">
-    {% csrf_token %}
-    <fieldset class="form-group">
-      <legend class="border-bottom mb-3">Profile Info</legend>
-      {{ user_form|crispy }}
-      {{ profile_form|crispy }}
-    </fieldset>
-    <div class="form-group">
-      <button class="w-100 btn btn-outline-success my-1" type="submit">Update</button>
-    </div>
-  </form>
 </div>
+
 {% endblock content %}
