--- a/blog/templates/blog/home.html
+++ b/blog/templates/blog/home.html
@@ -16,10 +16,10 @@
             </div>
         </div>
           <div class="card-body text-success cursor-pointer">
-            <h5 class="card-title">{{ post.title }}</h5>
+            <h5 class="card-title"><a class="card-title link-underline link-underline-opacity-0" href="{% url 'post-detail' post.pk  %}">{{ post.title }}</a></h5>
             {{ post.content|slice:":150" }}
             {% if post.content|length > 150 %}... 
-            <a href="{% url 'blog-posts' %}">Read more</a>
+            <a href="{% url 'post-detail' post.pk  %}">Read more</a>
             {% endif %}
           </div>
         </div>
