--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -53,6 +53,7 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
+              <a class="nav-item nav-link fw-medium" href="{% url 'post-create' %}">New Post</a>
               <a class="nav-item nav-link fw-medium" href="{% url 'profile' %}">Profile</a>
               <form method="post" action="{% url 'logout' %}">
                 {% csrf_token %}
