--- a/blog/templates/blog/full_post.html
+++ b/blog/templates/blog/full_post.html
@@ -1,24 +1,39 @@
 {% extends "blog/base.html" %}
 {% block content %}
-      <article class="w-auto">
-        <div class="card border-success mb-3">
-          <div class="d-flex article-metadata align-items-center justify-content-between border-bottom border-success border-2 w-auto">
-            <a class="mr-2 card-header bg-transparent text-decoration-none fw-semibold border-bottom-0 fs-med" 
-            href="{% url 'profile' %}">
-                <img src="{{ object.author.profile.avatar.url }}" alt="Author's Image" 
-                class="rounded-circle"
-                style="height: 40px; width: 40px; margin-right: 3px;">
-                {{ object.author }}
-            </a>
-            <div class="card-header bg-transparent border-bottom-0 fs-sm">
-              {{ object.date_posted|date:"M d, Y" }}
-            </div>
-        </div>
-          <div class="card-body text-success cursor-pointer">
-            <h5 class="card-title">{{ object.title }}</h5>
-            {{ object.content }}
-          </div>
-        </div>
-      </article>
-{% endblock content %}
+<article class="w-auto">
+  <div class="card border-success mb-3">
+    <div class="d-flex article-metadata align-items-center justify-content-between border-bottom border-success border-2 w-auto">
+      <div>
+        <a class="mr-1 card-header bg-transparent text-decoration-none fw-semibold border-bottom-0 fs-med" 
+          href="{% url 'profile' %}">
+          <img src="{{ object.author.profile.avatar.url }}" alt="Author's Image" 
+              class="rounded-circle my-2"
+              style="height: 40px; width: 40px; margin-right: 3px;">
+          {{ object.author }}
+        </a>
+        <span class="card-header bg-transparent border-bottom-0 fs-sm px-0">
+          {{ object.date_posted|date:"M d, Y" }}
+        </span>
+      </div>
 
+      {% if object.author == user %}
+      <div class="dropdown">
+        <button class="btn btn-link text-body p-0" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="fa-solid fa-ellipsis-vertical fa-lg"></i>
+        </button>
+        <ul class="dropdown-menu dropdown-menu-end">
+          <li><a class="dropdown-item text-info" href="{% url 'post-update' object.id %}"><i class="fa-solid fa-pen me-2"></i>Update</a></li>
+          <li><hr class="dropdown-divider"></li>
+          <li><a class="dropdown-item text-danger" href="{% url 'post-delete' object.id %}"><i class="fa-solid fa-trash me-2"></i>Delete</a></li>
+        </ul>
+      </div>
+      {% endif %}
+    </div>
+
+    <div class="card-body cursor-pointer">
+      <h5 class="card-title text-success">{{ object.title }}</h5>
+      {{ object.content|safe }}
+    </div>
+  </div>
+</article>
+{% endblock content %}
