--- a/blog/templates/blog/article.html
+++ b/blog/templates/blog/article.html
@@ -1,16 +1,4 @@
-<!-- 
-<div class="card bg-white p-2 px-3 border border-secondary rounded mb-3">
-    <h3>Our Sidebar</h3>
-    <p class="text">You can put any information here you'd like.</p>
-    <ul class="list-group">
-      <li class="list-group-item list-group-item-light">Latest Posts</li>
-      <li class="list-group-item list-group-item-light">Announcements</li>
-      <li class="list-group-item list-group-item-light">Calendars</li>
-      <li class="list-group-item list-group-item-light">etc</li>
-    </ul>
-  </div> -->
-
-  <div class="card border-success" style="width: 18rem;">
+  <div class="card border-success">
     <div class="card-body">
       <h3 class="card-title">Our Sidebar</h3>
       <p class="card-text">You can put any information here you'd like.</p>
