--- a/blog/templates/blog/posts_form.html
+++ b/blog/templates/blog/posts_form.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>{{ title }}</title>
   <!-- FontAwesome Icons -->
   <link
     rel="stylesheet"
@@ -13,6 +13,8 @@
   <!-- Bootstrap CSS -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <link rel="icon" type="image/x-icon" href="{% static 'blog/favicon/favicon.ico' %}">
+  <link rel="apple-touch-icon" href="{% static 'blog/favicon/apple-touch-icon.png' %}">
   <link rel="stylesheet" href="{% static 'blog/main.css' %}">
 
   <script>
@@ -43,6 +45,7 @@
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
             {% if user.is_authenticated %}
+            <a class="nav-item nav-link fw-medium" href="{% url 'post-create' %}">New Post</a>
             <a class="nav-item nav-link fw-medium" href="{% url 'profile' %}">Profile</a>
             <form method="post" action="{% url 'logout' %}">
               {% csrf_token %}
